# ds-commando

./: .gitignore  CMakeLists.txt  README.md  grepcsv  load  test.sh
data/: episode_master.csv  people2.csv
expected/: test1.csv  test2.csv
output/: README.md
src/: merge.c
